shorten slugs for blog posts

--- a/content/devlog/2021-05-14-prototype4.md
+++ b/content/devlog/2021-05-14-prototype4.md
@@ -1,6 +1,6 @@
 ---
 title: "Wireless Prototype"
-slug: psylink-prototype4
+slug: prototype4
 date: 2021-05-14
 ---
 
@@ -98,7 +98,7 @@ the power supplies to prevent cross-interference.
 
 ## Test Drive
 
-[I drove F-Zero with Prototype #2 before](psylink-fzero.html), but back then I
+[I drove F-Zero with Prototype #2 before](fzero.html), but back then I
 cheated a little bit.  It only recognized 2 keys, left and right, and I
 accelerated with the keyboard using my other hand.
 
@@ -153,7 +153,7 @@ can decide for itself which voltage differences it wants to look at.
 ## New PCB layout
 
 While soldering the PCB, I found some flaws and made these changes to the
-[previous PCB](psylink-pcb.html):
+[previous PCB](pcb.html):
 
 - Added silkscreen labels to the connectors and components.  I was sure I
   wouldn't mix up anything since there aren't many connectors, they're nicely
@@ -163,7 +163,7 @@ While soldering the PCB, I found some flaws and made these changes to the
   (I was actually not sure whether the pin holes will really conduct between
   the front and the back side of the board, so I added vias as a safety
   measure.)
-- The label now shows the new name ["psylink" instead of "myocular"](psylink-new-name.html)
+- The label now shows the new name ["psylink" instead of "myocular"](new-name.html)
 - A friend also gave me the tip to increase the thickness of power supply wires
 
 ![psylink6 PCB](data/psy/psylink6-pcb2.mod.png)
