add related circuits to boards

--- a/content/boards/b1.md
+++ b/content/boards/b1.md
@@ -5,4 +5,5 @@ image: boards/myocular0.5.1d_pcb.png
 date: 2021-04-30
 src: https://codeberg.org/hut/psylink/src/branch/master/schematics/myocular0.5.1d.kicad_pcb
 blog: pcb
+circuit: c5.1
 ---
