--- a/content/boards/b2.md
+++ b/content/boards/b2.md
@@ -6,4 +6,5 @@ date: 2021-05-12
 src: https://codeberg.org/hut/psylink/src/branch/master/schematics/psylink6.kicad_pcb
 blog: prototype4
 untested: true
+circuit: c5.1
 ---
