move all videos to peertube

--- a/content/devlog/2021-04-09-fzero.md
+++ b/content/devlog/2021-04-09-fzero.md
@@ -61,11 +61,7 @@ a magical keyboard with 2 keys =D
 
 Right away I tried it out to steer in my favorite racing game, F-Zero:
 
-<video class="tab" style="max-width: 100%;" controls>
-    Your browser does not support the &lt;video&gt; tag, download the video
-    <a href="data/myo/video2.webm">here</a>.
-    <source src="data/myo/video2.webm" />
-</video>
+<iframe width="560" height="315" sandbox="allow-same-origin allow-scripts allow-popups" title="PsyLink 2 Demo" src="https://peertube.linuxrocks.online/videos/embed/65711ae3-77e4-4f67-8ca9-a7cfe8919d83" frameborder="0" allowfullscreen></iframe>
 
 Note that in addition to the steering wheel, I used my other hand to
 accelerate.
