--- a/content/devlog/2021-04-11-ai.md
+++ b/content/devlog/2021-04-11-ai.md
@@ -82,11 +82,7 @@ Some quick facts:
 
 Video demo:
 
-<video class="tab" style="max-width: 100%;" controls>
-    Your browser does not support the &lt;video&gt; tag, download the video
-    <a href="data/myo/video3.webm">here</a>.
-    <source src="data/myo/video3.webm" />
-</video>
+<iframe width="560" height="315" sandbox="allow-same-origin allow-scripts allow-popups" title="PsyLink 3 Demo" src="https://peertube.linuxrocks.online/videos/embed/302e91db-2caa-49cc-81da-9cd73c0900ae" frameborder="0" allowfullscreen></iframe>
 
 Still a lot of work to do, but I'm happy with the software for now. Will tweak
 the hardware next.
