--- a/content/devlog/2021-05-14-prototype4.md
+++ b/content/devlog/2021-05-14-prototype4.md
@@ -32,11 +32,7 @@ So I sewed the sleeve, assembled one electrode pair along with its processing
 PCB, and wired everything together.  Here's me being overly excited about the
 first wireless test run:
 
-<video class="tab" style="max-width: 100%;" controls>
-    Your browser does not support the &lt;video&gt; tag, download the video
-    <a href="data/psy/video5-wireless.webm">here</a>.
-    <source src="data/psy/video5-wireless.webm" />
-</video>
+<iframe width="560" height="315" sandbox="allow-same-origin allow-scripts allow-popups" title="PsyLink 4 Test Run #1" src="https://peertube.linuxrocks.online/videos/embed/b61aeaa1-a15a-43de-a144-20980cffa259" frameborder="0" allowfullscreen></iframe>
 
 ## Electrode Placement
 
@@ -106,11 +102,7 @@ This time I hoped I could do better, and trained the AI to recognize 3
 different keys (left, right, accelerate) from my muscle signals.  It even
 kinda worked!
 
-<video class="tab" style="max-width: 100%;" controls>
-    Your browser does not support the &lt;video&gt; tag, download the video
-    <a href="data/psy/video6-fzero2.webm">here</a>.
-    <source src="data/psy/video6-fzero2.webm" />
-</video>
+<iframe width="560" height="315" sandbox="allow-same-origin allow-scripts allow-popups" title="PsyLink 4 Test Run #2" src="https://peertube.linuxrocks.online/videos/embed/7a3fe6d9-6693-4930-af00-3579099abd7d" frameborder="0" allowfullscreen></iframe>
 
 This was after recording ~2000 muscle signal samples over 1-2 minutes and
 training a convolutional neural network for 25-50 epochs (<1 minute) on the
