--- a/content/prototypes/p4.md
+++ b/content/prototypes/p4.md
@@ -10,3 +10,44 @@ components:
 - c6
 - t4
 ---
+
+## Datasheet
+
+- Features:
+    - Battery-powered
+    - Wireless, using Bluetooth Low Energy (BLE)
+    - Supports 17 electrodes (8 pairs + 1 ground)
+    - Transmits 8 signals at 8-bit resolution, 500Hz sampling rate
+    - Linux graphical user interface for:
+        - Mapping keyboard key presses to muscle signals
+        - Training a neural network to predict key presses from signals
+        - Simulating key presses based on neural network predictions
+    - GNURadio integration for plotting the raw signals + FFT
+- Hardware overview:
+    - A fabric glove/sleeve with a central component (arduino + power supply)
+      and 8 distributed signal clean-up units close to individual electrodes.
+    - [Circuit Schematic](/c6)
+    - [PCB of one distributed signal clean-up unit](/b1)
+- Software dependencies:
+    - Python3 (see [requirements.txt](https://codeberg.org/hut/psylink/src/branch/master/python/requirements.txt))
+        - [BLE-GATT](https://pypi.org/project/BLE-GATT/)
+        - [matplotlib](https://matplotlib.org/)
+        - [pynput](https://pypi.org/project/pynput/)
+        - [tensorflow](https://www.tensorflow.org/)
+    - ArduinoIDE
+        - [ArduinoBLE](https://www.arduino.cc/en/Reference/ArduinoBLE)
+        - [Arduino LSM9DS1](https://www.arduino.cc/en/Reference/ArduinoLSM9DS1) (for accelerometer/gyroscope)
+- Components:
+    - 1x [Arduino Nano 33 BLE Sense](https://store.arduino.cc/arduino-nano-33-ble-sense)
+    - 1x [LM324 Operational Amplifier](https://www.ti.com/product/LM324)
+    - 8x [INA128 Instrumentational Amplifier](https://www.ti.com/product/INA128)
+    - Any portable 6V power supply (like 2x CR2032)
+    - 17x Electrodes, e.g. [Prym 390120](https://www.prym.com/en/non-sew-refill-for-390120-smooth-cap-10mm-silver-coloured-390104) (don't laugh, they work)
+    - A forearm sleeve from non-conductive fabric
+    - Additional standard components (see schematic)
+- Power ratings
+    - Supply Voltage: 4.5-6V
+    - Power dissipation:
+        - Idle: ~86.9mW (16.9mA x 5.14V)
+        - Transmitting at 6-7kB/s: 92.5mW (18.0mA x 5.14V)
+- Weight: ~85g (at 9.81m/s² gravitational acceleration)
