--- a/content/prototypes/p4.md
+++ b/content/prototypes/p4.md
@@ -24,8 +24,9 @@ components:
         - Simulating key presses based on neural network predictions
     - GNURadio integration for plotting the raw signals + FFT
 - Hardware overview:
-    - A fabric glove/sleeve with a central component (arduino + power supply)
-      and 8 distributed signal clean-up units close to individual electrodes.
+    - [A fabric glove/sleeve](/t4) with a central component (arduino + power
+      supply) and 8 distributed signal clean-up units close to individual
+      electrodes.
     - [Circuit Schematic](/c6)
     - [PCB of one distributed signal clean-up unit](/b1)
 - Software dependencies:
