--- a/content/prototypes/p4.md
+++ b/content/prototypes/p4.md
@@ -11,6 +11,12 @@ components:
 - t4
 ---
 
+This is intended as a human input device (like a keyboard) that predicts your
+intention from muscle signals. Using a neural network, trained through a
+process where you press keys at the exact same time that you make movements
+with the limb wearing the device, it learns correlations between the muscle
+signals and intended keys, and can press them for you.
+
 ## Datasheet
 
 - Features:
