add blog images, fix images and links, make page dark

--- a/content/circuits/c3.md
+++ b/content/circuits/c3.md
@@ -1,7 +1,7 @@
 ---
 title: Myocular 0.3
 slug: c3
-image: circuits/myocular0.3.png
+image: circuits/c3.png
 date: 2021-04-14
 src: https://codeberg.org/hut/psylink/src/branch/master/schematics/myocular0.3.sch
 blog: gauntlet
