--- a/content/devlog/2021-04-09-fzero.md
+++ b/content/devlog/2021-04-09-fzero.md
@@ -7,13 +7,13 @@ date: 2021-04-09
 The look of the first device was way too unprofessional, so I pulled out my
 sewing machine and made a custom tailored sleeve from comfortable modal fabric.
 
-![photo](data/myo/IMG_20210409_215749.mod.jpg)
+![photo](/img/prototypes/p2.jpg)
 
 On the inside, I attached some recycled studs that served as electrodes. Who
 needs that expensive stuff they sell as electrodes when a piece of iron
 suffices?
 
-![photo](data/myo/IMG_20210410_185301.mod.jpg)
+![photo](/img/prototypes/p2_inside.jpg)
 
 This time it had 4 electrodes.  I targeted the middle and the distal end of two
 muscles, the [Brachioradialis](https://en.wikipedia.org/wiki/Brachioradialis)
@@ -41,7 +41,7 @@ up the amplitudes of the remaining frequencies to generate the output.
 Still very crude, but it allowed me to get distinctive signal patterns for
 various positions of my arm:
 
-[![screenshot](data/myo/2021-04-10_02-18-04_1920x1080.png.thumb.jpg)](data/myo/2021-04-10_02-18-04_1920x1080.png)
+[![screenshot](/img/blog/2021-04-10_testfft2.thumb.jpg)](/img/blog/2021-04-10_testfft2.png)
 
 I was genuinely surprised that I got information of this fidelity and
 usefulness from just hooking up 4 ADC's to semi random places of my forearm and
