--- a/content/devlog/2021-04-13-gauntlet.md
+++ b/content/devlog/2021-04-13-gauntlet.md
@@ -24,24 +24,24 @@ range.
 
 It all started out like a piece of goth armwear:
 
-![photo](data/myo/IMG_20210413_201956.resized.jpg)
+![photo](/img/prototypes/p3_inside.jpg)
 
 Photo from the testing period:
 
-![photo](data/myo/IMG_20210414_021833.jpg.resized.mod.jpg)
+![photo](/img/blog/2021-04-14_p3_testing.jpg)
 
 Soldering wires to the electrodes:
 
-![photo](data/myo/IMG_20210414_030229_HDR.jpg.resized.mod.jpg)
+![photo](/img/blog/2021-04-14_p3_soldering.jpg)
 
 The "opened" state shows the components of the device:
 
-![photo](data/myo/IMG_20210414_041156_HDR.jpg.resized.mod.jpg)
+![photo](/img/prototypes/p3_open.jpg)
 
 But it can be covered by wrapping around a layer of cloth, turning it into an
 inconspicuous fingerless glove:
 
-![photo](data/myo/IMG_20210414_042155_HDR.jpg.resized.jpg)
+![photo](/img/prototypes/p3.jpg)
 
 If you look hard at this picture, you can see the LED of the Arduino glowing
 through the fabric, the voltage divider to the right of it, appearing like a
