--- a/content/devlog/2021-04-30-pcb.md
+++ b/content/devlog/2021-04-30-pcb.md
@@ -7,7 +7,7 @@ date: 2021-04-30
 Today I made a new version of the PCB that processes the signals from one
 electrode pair:
 
-[![pcb picture](data/myo/myocular0.5.1d_pcb.png)](https://codeberg.org/hut/psylink/src/branch/master/schematics/myocular0.5.1d.kicad_pcb)
+[![pcb picture](/img/boards/myocular0.5.1d_pcb.png)](/b1)
 
 Actually, several versions. This is the 4th iteration, and let's not even look
 at the previous ones because they were just plain wrong.  I stared at this
