--- a/content/devlog/2021-04-48-wireless.md
+++ b/content/devlog/2021-04-48-wireless.md
@@ -22,7 +22,7 @@ They don't have sharp edges like the pyramidal studs I used before, and allow
 me to easily remove the wires from the electrodes and plug them in somewhere
 else as needed.
 
-[![photo of the breadboard](data/myo/IMG_20210428_192422.jpg.resized.png.thumb.jpg)](data/myo/IMG_20210428_192422.jpg.resized.png)
+[![photo of the breadboard](/img/blog/2021-04-28_wireless.thumb.jpg)](/img/blog/2021-04-28_wireless.png)
 
 I also employed [INA128 instrumentation
 amplifiers](https://www.ti.com/product/INA128), drastically reducing the
@@ -31,9 +31,7 @@ glue, along with the 3-4 capacitors and 3-5 resistors required for
 processing/de-noising, and place 8 of these processing units across the
 glove/wristband, connected to two electrodes each.
 
-[![Circuit schematic](data/myo/myocular0.5.thumb.png)](data/myo/myocular0.5.png)
-
-[[KiCad Eeschema file](data/myo/myocular0.5.sch)]
+[![Circuit schematic](/img/circuits/c5.thumb.png)](/c5)
 
 Now I'm battling the problem that I can only get about 1kB/s across the ether.
 How am I supposed to put 12kB/s worth of signal in there? (8 channels,
