--- a/content/devlog/2021-05-06-ui2.md
+++ b/content/devlog/2021-05-06-ui2.md
@@ -12,7 +12,7 @@ The new user interface now supports all previous features!
 - Auto-pressing keys based on incoming signals using said neural network to
   predict which keys the user wants to press
 
-![MyocularUI screenshot](data/myo/2021-05-07_05-50-26_1920x1080_000.crop.png)
+![MyocularUI screenshot](/img/blog/2021-05-07_myocularui.png)
 
 It's sooo much more pleasant to have a direct view on the state of the
 application and an instant visualization of the signals.  The previous version
@@ -20,7 +20,7 @@ was literally just a blank window, with a single menu called "File" that
 contained all the actions. :D  I never even bothered to upload a screenshot,
 but here's one for documentation purposes:
 
-![screenshot of old "Calibrator" tool](data/myo/2021-05-07_06-10-30_1920x1080.crop.png)
+![screenshot of old 'Calibrator' tool](/img/blog/2021-05-07_calibrator.png)
 
 Also, this time I used clean & efficient data structures to make the code
 easier to work with, a more reliable key capturing library
