--- a/content/devlog/2021-05-14-prototype4.md
+++ b/content/devlog/2021-05-14-prototype4.md
@@ -6,7 +6,7 @@ date: 2021-05-14
 
 Hell yeah!  The PCBs arrived:
 
-![pcb photo](data/psy/IMG_20210510_165536.crop.png)
+![pcb photo](/img/blog/2021-05-10_pcb.png)
 
 ## Soldering & Sewing
 
@@ -14,7 +14,7 @@ I never soldered such tiny SMD parts before, and didn't have proper tools, way
 too thick soldering tin and solder iron tip.  I was also too impatient to order
 some, so after hours of torture, I produced this batch:
 
-![photo of 8 soldered pcbs for signal processing](data/psy/IMG_20210510_220906_HDR.crop.jpg)
+![photo of 8 soldered pcbs for signal processing](/img/blog/2021-05-10_pcb_soldered.jpg)
 
 The new prototype was to be a forearm sleeve of modal fabric once again, with
 snap buttons for electrodes which will also hold the signal processing PCBs in
@@ -24,7 +24,7 @@ But how to attach the Arduino and the power supply module to the sleeve?  I
 thought, "why not Velcro?" (hook-and-loop fastener) and started sewing it to
 the circuit boards:
 
-![photo of me sewing velcro to the power supply module](data/psy/IMG_20210511_035833.crop.process.jpg)
+![photo of me sewing velcro to the power supply module](/img/blog/2021-05-11_velcro.jpg)
 
 (Yes, doing it felt as weird as it looks)
 
@@ -41,7 +41,7 @@ improvised muscle map along with two flexible electrodes on individual straps,
 I could find spots whose electrical activity correlated with turning the arm,
 twisting the wrist, or pressing individual fingers onto the table:
 
-[![photo of me mapping my forearm](data/psy/IMG_20210511_182254.color_enhance.sharpen.resize.thumb.jpg)](data/psy/IMG_20210511_182254.color_enhance.sharpen.resize.jpg)
+[![photo of me mapping my forearm](/img/blog/2021-05-11_test_straps.thumb.jpg)](/img/blog/2021-05-11_test_straps.jpg)
 
 [Flexor Digitorum
 Superficialis](https://en.wikipedia.org/wiki/Flexor_digitorum_superficialis_muscle)
@@ -57,7 +57,7 @@ surprised.
 
 The final layout of the electrodes:
 
-[![electrode map](data/psy/IMG_20210512_055029_HDR.crop.annotate.jpg)](data/psy/IMG_20210512_055029_HDR.crop.annotate.jpg)
+[![electrode map](/img/blog/2021-05-12_electrode_map.jpg)](/img/blog/2021-05-12_electrode_map.jpg)
 
 This piece is fully separable from the electronics and therefore machine
 washable.
@@ -67,7 +67,7 @@ well as everything combined.  This nicely shows the tree topology of the green
 signal processing modules that pass through the power supply among each other
 to reduce the volume of wiring.
 
-[![inside](data/psy/IMG_20210512_055048_HDR.crop.thumb.jpg)](data/psy/IMG_20210512_055048_HDR.crop.jpg) [![electronics only](data/psy/IMG_20210512_054941_HDR.crop.thumb.jpg)](data/psy/IMG_20210512_054941_HDR.crop.jpg) [![everything combined](data/psy/IMG_20210512_053308_HDR.crop.resize.thumb.png)](data/psy/IMG_20210512_053308_HDR.crop.resize.png)
+[![inside](/img/blog/2021-05-12_inside.thumb.jpg)](/img/blog/2021-05-12_inside.jpg) [![electronics only](/img/blog/2021-05-12_electronics.thumb.jpg)](/img/blog/2021-05-12_electronics.jpg) [![everything combined](/img/blog/2021-05-12_assembled.thumb.png)](/img/blog/2021-05-12_assembled.png)
 
 I could have had 8 electrode pairs, but only added electrodes for 7.  On these
 pictures, the electrode pair for the middle finger is also missing the
@@ -79,7 +79,7 @@ Velcro and maybe add an 8th electrode pair there.
 
 The final cyb3rware:
 
-![photo of the final product](data/psy/IMG_20210512_172320_HDR.crop.cleanup.resize.sharpen.jpg)
+![photo of the final product](/img/prototypes/p4.jpg)
 
 While the signal was quite strong with the test straps, I found that the
 amplitude of the signal went way down once I had everything attached to the
@@ -94,7 +94,7 @@ the power supplies to prevent cross-interference.
 
 ## Test Drive
 
-[I drove F-Zero with Prototype #2 before](fzero.html), but back then I
+[I drove F-Zero with Prototype #2 before](/devlog/fzero), but back then I
 cheated a little bit.  It only recognized 2 keys, left and right, and I
 accelerated with the keyboard using my other hand.
 
@@ -123,7 +123,7 @@ flowgraph](https://codeberg.org/hut/psylink/src/branch/master/gnuradio/plot_sign
 while randomly moving my forearm/wrist/hand show that the correlations between
 the signals are low enough to be theoretically useful:
 
-[![graphs of signals](data/psy/2021-05-15_23-53-16_1920x1080.crop.crop.png)](data/psy/2021-05-15_23-53-16_1920x1080.crop.png)
+[![graphs of signals](/img/blog/2021-05-15_signals.thumb.png)](/img/blog/2021-05-15_signals.png)
 
 If you enlarge this image, you'll see that especially the black line is
 considerably different, which I suppose is because it's the only electrode pair
@@ -145,7 +145,7 @@ can decide for itself which voltage differences it wants to look at.
 ## New PCB layout
 
 While soldering the PCB, I found some flaws and made these changes to the
-[previous PCB](pcb.html):
+[previous PCB](/devlog/pcb):
 
 - Added silkscreen labels to the connectors and components.  I was sure I
   wouldn't mix up anything since there aren't many connectors, they're nicely
@@ -155,7 +155,7 @@ While soldering the PCB, I found some flaws and made these changes to the
   (I was actually not sure whether the pin holes will really conduct between
   the front and the back side of the board, so I added vias as a safety
   measure.)
-- The label now shows the new name ["psylink" instead of "myocular"](new-name.html)
+- The label now shows the new name ["psylink" instead of "myocular"](/devlog/new-name)
 - A friend also gave me the tip to increase the thickness of power supply wires
 
-![psylink6 PCB](data/psy/psylink6-pcb2.mod.png)
+[![psylink6 PCB](/img/boards/psylink6-pcb2.png)](/b2)
