--- a/content/circuits/c1.md
+++ b/content/circuits/c1.md
@@ -1,7 +1,7 @@
 ---
 title: Myocular 0.1
 slug: c1
-image: circuits/myocular0.1.png
+image: circuits/c1.png
 date: 2021-04-08
 src: https://codeberg.org/hut/psylink/src/branch/master/schematics/myocular0.1.sch
 blog: baby-steps
