--- a/content/circuits/c6.md
+++ b/content/circuits/c6.md
@@ -1,8 +1,8 @@
 ---
 title: PsyLink 6
 slug: c6
-image: circuits/psylink6.png
-thumb: circuits/psylink6.thumb.png
+image: circuits/c6.png
+thumb: circuits/c6.thumb.png
 date: 2021-05-09
 src: https://codeberg.org/hut/psylink/src/branch/master/schematics/psylink6.sch
 blog: power
