fix textile images

--- a/content/textiles/t3.md
+++ b/content/textiles/t3.md
@@ -1,8 +1,8 @@
 ---
 title: Testing Straps
 slug: t3
-image: blog/IMG_20210511_182254.color_enhance.sharpen.resize.jpg
-thumb: blog/IMG_20210511_182254.color_enhance.sharpen.resize.thumb.jpg
+image: blog/2021-05-11_test_straps.jpg
+thumb: blog/2021-05-11_test_straps.thumb.jpg
 date: 2021-05-11
 blog: prototype4
 ---
