add descriptions to circuit boards

--- a/content/boards/b1.md
+++ b/content/boards/b1.md
@@ -7,3 +7,12 @@ src: https://codeberg.org/hut/psylink/src/branch/master/schematics/myocular0.5.1
 blog: pcb
 circuit: c5.1
 ---
+
+Please refer to the page of {{% link "b2" %}} for documentation, because I
+didn't know what I was doing  at the time, so this PCB has no silkscreen
+labels on the individual parts.  The part placement, pin setup and
+almost everything else is identical to {{% link "b2" %}} though.
+
+The label says "myocular 0.5.1d", but obviously the [name of the project has
+changed](/devlog/new-name) since then.  The right label would be
+"psylink.me/b1" which is also a link to this page.
