--- a/content/boards/b2.md
+++ b/content/boards/b2.md
@@ -8,3 +8,31 @@ blog: prototype4
 untested: true
 circuit: c5.1
 ---
+
+This is an (untested) improvement upon {{% link "b1" %}} and implements the
+"Signal Processing Module" from [circuit 5.1](/c5.1) and [circuit 6](c6).
+Essentially it calculates the difference between the voltages at the "in1" and
+"in2" pins, after applying a high-pass filter through C1/C2, and a pull-up/down
+through R1/R2 towards Vref to base the signal around the
+center.
+
+The label says "psylink6" but these days I would write [psylink.me/b2](/b2) on it.
+
+## Part placement
+
+- C1: 100pF capacitor
+- C2: 100pF capacitor
+- C3: 100nF capacitor (exact capacitance not very important)
+- R1: 1MOhm resistor, 1% variance
+- R2: 1MOhm resistor, 1% variance
+- R3: 1kOhm resistor, 1% variance
+- INA: [Texas Instruments INA128 instrumentational amplifier](https://www.ti.com/product/INA128)
+
+## Pins
+
+The "out" pin goes directly to the Arduino ADC (or perhaps through a
+multiplexer)
+
+The redundant Vref/GND/V+ pins can be used to wire multiple of these in a tree
+network topology, where only the first board needs to be directly connected to
+the power module.
