--- a/content/boards/b1.md
+++ b/content/boards/b1.md
@@ -14,5 +14,5 @@ labels on the individual parts.  The part placement, pin setup and
 almost everything else is identical to {{% link "b2" %}} though.
 
 The label says "myocular 0.5.1d", but obviously the [name of the project has
-changed](/devlog/new-name) since then.  The right label would be
+changed](/blog/new-name) since then.  The right label would be
 "psylink.me/b1" which is also a link to this page.
