add video demo links @ prototype list page

--- a/content/prototypes/p1.md
+++ b/content/prototypes/p1.md
@@ -4,6 +4,7 @@ slug: p1
 image: prototypes/p1.jpg
 date: 2021-04-08
 blog: baby-steps
+video: https://peertube.linuxrocks.online/videos/watch/24bec96b-2945-419b-96fb-0bc91185d99b
 components:
 - c1
 ---
