--- a/content/prototypes/p3.md
+++ b/content/prototypes/p3.md
@@ -4,6 +4,7 @@ slug: p3
 image: prototypes/p3.jpg
 date: 2021-04-13
 blog: gauntlet
+video: https://peertube.linuxrocks.online/videos/watch/1f3470fd-bb9a-4202-ba53-1d6686061cae
 components:
 - c3
 - t2
