--- a/content/prototypes/p4.md
+++ b/content/prototypes/p4.md
@@ -4,6 +4,7 @@ slug: p4
 image: prototypes/p4.jpg
 date: 2021-05-12
 blog: prototype4
+video: https://peertube.linuxrocks.online/videos/watch/0fe35dae-f1fc-4ace-b6e1-5f54e255bbef
 components:
 - b1
 - bp1
