--- a/content/boards/b2.md
+++ b/content/boards/b2.md
@@ -1,7 +1,7 @@
 ---
 title: Diff. Amplifier 6
 slug: b2
-image: boards/psylink6-pcb2.png
+image: boards/b2.png
 date: 2021-05-12
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/psylink6.kicad_pcb
 blog: prototype4
@@ -9,14 +9,14 @@ untested: true
 circuit: c5.1
 ---
 
+## Purpose
+
 This is an (untested) improvement upon {{% link "b1" %}} and implements the
 "Signal Processing Module" from [circuit 5.1](/c5.1) and [circuit 6](c6).
 Essentially it calculates the difference between the voltages at the "in1" and
 "in2" pins, after applying a high-pass filter through C1/C2, and a pull-up/down
 through R1/R2 towards Vref to base the signal around the
 center.
-
-The label says "psylink6" but these days I would write [psylink.me/b2](/b2) on it.
 
 ## Part placement
 
@@ -26,7 +26,8 @@ The label says "psylink6" but these days I would write [psylink.me/b2](/b2) on i
 - R1: 1MOhm resistor, 1% variance
 - R2: 1MOhm resistor, 1% variance
 - R3: 1kOhm resistor, 1% variance
-- INA: [Texas Instruments INA128 instrumentational amplifier](https://www.ti.com/product/INA128)
+- INA128: [Texas Instruments INA128 instrumentational amplifier](https://www.ti.com/product/INA128)
+
 
 ## Pins
 
