better picture for b1

--- a/content/boards/b1.md
+++ b/content/boards/b1.md
@@ -1,7 +1,7 @@
 ---
 title: Diff. Amplifier 0.5.1d
 slug: b1
-image: boards/myocular0.5.1d_pcb.png
+image: boards/b1.png
 date: 2021-04-30
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/myocular0.5.1d.kicad_pcb
 blog: pcb
