update links to circuits/schematics

--- a/content/circuits/c1.md
+++ b/content/circuits/c1.md
@@ -3,6 +3,6 @@ title: Myocular 0.1
 slug: c1
 image: circuits/c1.png
 date: 2021-04-08
-src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/myocular0.1.sch
+src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit1.sch
 blog: baby-steps
 ---
