--- a/content/circuits/c5.md
+++ b/content/circuits/c5.md
@@ -4,6 +4,6 @@ slug: c5
 image: circuits/c5.png
 thumb: circuits/c5.thumb.png
 date: 2021-04-28
-src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/myocular0.5.sch
+src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit5.sch
 blog: wireless
 ---
