update circuit diagrams with new names. removed thumbs.
thumbs are not needed anymore. after using https://pngquant.org/ ,
the old thumbs were larger than the new full-sized images :'D.

--- a/content/blog/2021-04-48-wireless.md
+++ b/content/blog/2021-04-48-wireless.md
@@ -31,7 +31,7 @@ glue, along with the 3-4 capacitors and 3-5 resistors required for
 processing/de-noising, and place 8 of these processing units across the
 glove/wristband, connected to two electrodes each.
 
-[![Circuit schematic](/img/circuits/c5.thumb.png)](/c5)
+[![Circuit schematic](/img/circuits/c5.png)](/c5)
 
 Now I'm battling the problem that I can only get about 1kB/s across the ether.
 How am I supposed to put 12kB/s worth of signal in there? (8 channels,
