add some photographs to p4 and t4

--- a/content/prototypes/p4.md
+++ b/content/prototypes/p4.md
@@ -18,6 +18,10 @@ process where you press keys at the exact same time that you make movements
 with the limb wearing the device, it learns correlations between the muscle
 signals and intended keys, and can press them for you.
 
+## Electrode map
+
+[![electrode map](/img/blog/2021-05-12_electrode_map.jpg)](/img/blog/2021-05-12_electrode_map.jpg)
+
 ## Datasheet
 
 - Features:
