--- a/content/textiles/t4.md
+++ b/content/textiles/t4.md
@@ -5,3 +5,13 @@ image: prototypes/p4.jpg
 date: 2021-05-12
 blog: prototype4
 ---
+
+[![electrode map](/img/blog/2021-05-12_electrode_map.jpg)](/img/blog/2021-05-12_electrode_map.jpg)
+
+[![inside](/img/blog/2021-05-12_inside.jpg)](/img/blog/2021-05-12_inside.jpg)
+
+[![electronics only](/img/blog/2021-05-12_electronics.jpg)](/img/blog/2021-05-12_electronics.jpg)
+
+[![everything combined](/img/blog/2021-05-12_assembled.png)](/img/blog/2021-05-12_assembled.png)
+
+![photo of me sewing velcro to the power supply module](/img/blog/2021-05-11_velcro.jpg)
