link c7/c8/bp2 with blog post

--- a/content/circuits/c8.md
+++ b/content/circuits/c8.md
@@ -3,5 +3,6 @@ title: Circuit 8
 slug: c8
 image: circuits/c8.png
 date: 2021-06-03
+blog: roots
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit8.sch
 ---
