refactor component layouts

--- a/content/circuits/c1.md
+++ b/content/circuits/c1.md
@@ -5,4 +5,5 @@ image: circuits/c1.png
 date: 2021-04-08
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit1.sch
 blog: baby-steps
+prototypes: ["p1"]
 ---
