--- a/content/circuits/c3.md
+++ b/content/circuits/c3.md
@@ -5,4 +5,5 @@ image: circuits/c3.png
 date: 2021-04-14
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit3.sch
 blog: gauntlet
+prototypes: ["p3"]
 ---
