--- a/content/circuits/c5.md
+++ b/content/circuits/c5.md
@@ -4,5 +4,8 @@ slug: c5
 image: circuits/c5.png
 date: 2021-04-28
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit5.sch
+broken: true
 blog: wireless
 ---
+
+This revision of the circuit has a bad feedback loop on the LM324 opamp. Use the power supply module circuit of {{% link "c6" %}} instead.
