--- a/content/circuits/c7.md
+++ b/content/circuits/c7.md
@@ -4,5 +4,7 @@ slug: c7
 image: circuits/c7.png
 date: 2021-06-02
 blog: roots
+boards: ["bp2"]
+untested: true
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit7.sch
 ---
