--- a/content/circuits/c2.md
+++ b/content/circuits/c2.md
@@ -5,4 +5,5 @@ image: circuits/c2.png
 date: 2021-04-09
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit2.sch
 blog: fzero
+prototypes: ["p2"]
 ---
