--- a/content/circuits/c5.1.md
+++ b/content/circuits/c5.1.md
@@ -5,4 +5,8 @@ image: circuits/c5.1.png
 date: 2021-04-29
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit5.1.sch
 blog: soldering-fail
+broken: true
+boards: ["b1", "b2"]
 ---
+
+This revision of the circuit has a bad feedback loop on the LM324 opamp. Use the power supply module circuit of {{% link "c6" %}} instead.
