add some text to the pages of p1, p2, and p3

--- a/content/prototypes/p2.md
+++ b/content/prototypes/p2.md
@@ -10,4 +10,10 @@ components:
 - t1
 ---
 
+A fabric sleeve with 4 electrodes made from metal studs that go straight to the
+analog-to-digital converters of an Arduino Nano 33 BLE Sense, which is wired to
+a PC via USB and live-streams the collected signals via UART.
 
+This is what the inside of the sleeve looks like:
+
+![photo1](/img/prototypes/p2_inside.jpg)
