--- a/content/prototypes/p3.md
+++ b/content/prototypes/p3.md
@@ -9,3 +9,23 @@ components:
 - c3
 - t2
 ---
+
+A simple prototype made of a fabric glove, an Arduino Nano 33 BLE Sense wired
+to the PC via USB, and 9 electrodes, 8 of which record the voltage potential
+around the wrist, and 1 that acts as a ground electrode and which is connected
+to the 1.65V or 2.5V reference voltage coming from a voltage divider.
+
+The signal electrodes are attached directly to the analog-to-digital converters
+of the Arduino, which live-streams the collected signals via UART.
+
+The glove has a built-in cover for the electronics.  When opened up, it looks
+like this:
+
+![photo1](/img/textiles/t3.jpg)
+
+The electrodes are simple metal studs:
+
+![photo2](/img/prototypes/p3_inside.jpg)
+
+Note that there are 16 electrodes, 8 pairs of two, going around the wrist, but
+only 8 of these are actually connected.
