more concise b1 text

--- a/content/boards/b1.md
+++ b/content/boards/b1.md
@@ -8,10 +8,12 @@ blog: pcb
 circuit: c5.1
 ---
 
-Please refer to the page of {{% link "b2" %}} for documentation, because I
-didn't know what I was doing  at the time, so this PCB has no silkscreen
-labels on the individual parts.  The part placement, pin setup and
-almost everything else is identical to {{% link "b2" %}} though.
+Please refer to the page of {{% link "b2" %}} for documentation, since the part
+placement, pin setup and almost everything else is identical to that board.
+
+The only reason why you might want to use this board over {{%link "b2" %}} is
+that this board design has been produced, tested, and verified to work, while
+{{% link "b2" %}} hasn't.
 
 The label says "myocular 0.5.1d", but obviously the [name of the project has
 changed](/blog/new-name) since then.  The right label would be
