positive "tested" param instead of negative "untested"
with a negative "untested: true" param, you could simply forget to add
it and accidentally mark something as tested.  With a positive "tested:
true" param, forgetting results in a warning.

--- a/content/boards/b1.md
+++ b/content/boards/b1.md
@@ -6,6 +6,7 @@ date: 2021-04-30
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit5.1d.kicad_pcb
 blog: pcb
 circuit: c5.1
+tested: true
 ---
 
 Please refer to the page of {{% link "b2" %}} for documentation, since the part
