--- a/content/circuits/c2.md
+++ b/content/circuits/c2.md
@@ -6,4 +6,5 @@ date: 2021-04-09
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit2.sch
 blog: fzero
 prototypes: ["p2"]
+tested: true
 ---
