--- a/content/circuits/c3.md
+++ b/content/circuits/c3.md
@@ -6,4 +6,5 @@ date: 2021-04-14
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit3.sch
 blog: gauntlet
 prototypes: ["p3"]
+tested: true
 ---
