--- a/content/circuits/c4.md
+++ b/content/circuits/c4.md
@@ -5,4 +5,5 @@ image: circuits/c4.png
 date: 2021-04-24
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit4.sch
 blog: first-amp-circuit
+tested: true
 ---
