--- a/content/circuits/c5.1.md
+++ b/content/circuits/c5.1.md
@@ -6,6 +6,7 @@ date: 2021-04-29
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit5.1.sch
 blog: soldering-fail
 broken: true
+tested: true
 boards: ["b1", "b2"]
 ---
 
