--- a/content/circuits/c5.md
+++ b/content/circuits/c5.md
@@ -5,6 +5,7 @@ image: circuits/c5.png
 date: 2021-04-28
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit5.sch
 broken: true
+tested: true
 blog: wireless
 ---
 
