--- a/content/prototypes/p1.md
+++ b/content/prototypes/p1.md
@@ -5,6 +5,7 @@ image: prototypes/p1.jpg
 date: 2021-04-08
 blog: baby-steps
 video: https://peertube.linuxrocks.online/videos/watch/a32a87cd-7a40-4cc2-8984-b44be52a8e2c
+tested: true
 components:
 - c1
 ---
