--- a/content/prototypes/p2.md
+++ b/content/prototypes/p2.md
@@ -5,6 +5,7 @@ image: prototypes/p2.jpg
 blog: fzero
 video: https://peertube.linuxrocks.online/videos/watch/65711ae3-77e4-4f67-8ca9-a7cfe8919d83
 date: 2021-04-09
+tested: true
 components:
 - c2
 - t1
