--- a/content/software/s3.md
+++ b/content/software/s3.md
@@ -5,4 +5,5 @@ image: software/s3.png
 date: 2021-05-06
 src: https://codeberg.org/psylink/psylink/src/branch/master/python
 blog: ui2
+tested: true
 ---
