--- a/content/textiles/t3.md
+++ b/content/textiles/t3.md
@@ -5,4 +5,5 @@ image: blog/2021-05-11_test_straps.jpg
 thumb: blog/2021-05-11_test_straps.thumb.jpg
 date: 2021-05-11
 blog: prototype4
+tested: true
 ---
