--- a/content/textiles/t4.md
+++ b/content/textiles/t4.md
@@ -4,6 +4,7 @@ slug: t4
 image: prototypes/p4.jpg
 date: 2021-05-12
 blog: prototype4
+tested: true
 ---
 
 [![electrode map](/img/blog/2021-05-12_electrode_map.jpg)](/img/blog/2021-05-12_electrode_map.jpg)
