--- a/content/circuits/c1.md
+++ b/content/circuits/c1.md
@@ -6,4 +6,5 @@ date: 2021-04-08
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit1.sch
 blog: baby-steps
 prototypes: ["p1"]
+tested: true
 ---
