--- a/content/circuits/c6.md
+++ b/content/circuits/c6.md
@@ -5,6 +5,7 @@ image: circuits/c6.png
 date: 2021-05-09
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit6.sch
 blog: power
+tested: true
 boards: ["bp1", "b1", "b2"]
 prototypes: ["p4"]
 ---
