--- a/content/prototypes/p5.md
+++ b/content/prototypes/p5.md
@@ -1,8 +1,11 @@
 ---
 title: Prototype 5
 slug: p5
-date: 2021-06-04
-blog: roots
+date: 2021-06-10
+blog: believe
+broken: true
+tested: true
+image: blog/2021-06-10_front_battery.png
 components:
 - bp2
 - c8
