add bp3, c9 (alpha versions)

--- a/content/boards/b1.md
+++ b/content/boards/b1.md
@@ -19,3 +19,5 @@ that this board design has been produced, tested, and verified to work, while
 The label says "myocular 0.5.1d", but obviously the [name of the project has
 changed](/blog/new-name) since then.  The right label would be
 "psylink.me/b1" which is also a link to this page.
+
+- Dimensions: 20 x 16mm
