--- a/content/boards/b2.md
+++ b/content/boards/b2.md
@@ -27,7 +27,6 @@ center.
 - R3: 1kOhm resistor, 1% variance
 - INA128: [Texas Instruments INA128 instrumentational amplifier](https://www.ti.com/product/INA128)
 
-
 ## Pins
 
 The "out" pin goes directly to the Arduino ADC (or perhaps through a
@@ -36,3 +35,7 @@ multiplexer)
 The redundant Vref/GND/V+ pins can be used to wire multiple of these in a tree
 network topology, where only the first board needs to be directly connected to
 the power module.
+
+## Details
+
+- Dimensions: 20 x 16mm
