edited last post

--- a/content/blog/2021-06-21-aaa.md
+++ b/content/blog/2021-06-21-aaa.md
@@ -33,10 +33,10 @@ me:  If you don't have soldering flux (which I didn't have), just use
 made a huge difference!  "If it's stupid and it works, it's not stupid."
 
 Then - for whatever reason - the voltage was going up to 1.5V instead of 5V,
-[just like with the previous PCB layout](/blog/believe).  I thought I fixed
-that problem by optimizing the layout around the TPS61220 chip, but apparently
-that wasn't enough.  I figured the 4.7&micro;H inductance at L1 wasn't big
-enough, so I squeezed in a second coil:
+[just like with the previous PCB layout](/blog/believe).  I thought I [fixed
+that problem by optimizing the layout around the TPS61220
+chip](/blog/power-module3), but apparently that wasn't enough.  I figured the
+4.7&micro;H inductance at L1 wasn't big enough, so I squeezed in a second coil:
 
 [![photo, coil acrobatics](/img/blog/2021-06-21_acrobatics.jpg)](/img/blog/2021-06-21_acrobatics.jpg)
 
@@ -76,6 +76,7 @@ can sacrifice some power for signal accuracy.  No idea whether it's actually
 going to help though.  I chose 110k&Omega; instead of the more common
 100k&Omega; and 220k&Omega; because the boost converter already requires
 a 110k&Omega; resistor, and that way this prototype requires fewer different
-parts.
+parts.  But the exact values don't matter, as long as both resistances are
+identical.
 
 Tomorrow I'll start working on the electrodes and wristband. :)
