--- a/content/blog/2021-06-21-aaa.md
+++ b/content/blog/2021-06-21-aaa.md
@@ -5,8 +5,8 @@ date: 2021-06-21
 ---
 
 Wow, it feels like ages since I started working on making PsyLink run on a
-rechargeable AAA battery.  It's been almost 3 weeks now, but finally I
-succeeded :)
+rechargeable AAA battery. It sounds so simple and straight-forward, but it
+wasn't :).  This ate 2.5 weeks of my time, but finally I succeeded!
 
 [![photo, tilted perspective](/img/blog/2021-06-21_tilted.jpg)](/img/blog/2021-06-21_tilted.jpg)
 
@@ -29,8 +29,10 @@ solder it on properly.  I kept accidentally connecting the pins of the chip
 with solder.  I gave up and started asking around friends for whether they
 could solder it on for me, when I remembered this soldering tip someone gave
 me:  If you don't have soldering flux (which I didn't have), just use
-✨margarine✨ instead ;D.  It sounds very wrong and stupid, but it actually
-made a huge difference!  "If it's stupid and it works, it's not stupid."
+✨margarine✨ instead ;D.  It sounds very wrong, but it actually made a huge
+difference, and only thanks to the power of margarine I was able to keep the
+solder exactly where I needed it to be.  "If it's stupid and it works, it's not
+stupid."
 
 Then - for whatever reason - the voltage was going up to 1.5V instead of 5V,
 [just like with the previous PCB layout](/blog/believe).  I thought I [fixed
@@ -40,11 +42,13 @@ chip](/blog/power-module3), but apparently that wasn't enough.  I figured the
 
 [![photo, coil acrobatics](/img/blog/2021-06-21_acrobatics.jpg)](/img/blog/2021-06-21_acrobatics.jpg)
 
-This alone didn't help, but if I manually held an additional 10&micro;H
+(It looks like two tardigrades playing ball :) I wish I made a better picture
+before I disassembled it again)
+
+This alone didn't help, but when I manually held an additional 10&micro;H
 inductance in parallel to L1 for 1 second while the device was running, it
-would get kickstarted and reach a consistent 5V... until I actually drained
-some current, which made the voltage drop back to 1.5V immediately.
-Curious behavior. :D
+surprisingly kickstarted and reached 5V!... until I drained some current, which
+made the voltage collapse back to 1.5V immediately.  Curious behavior. :D
 
 Then I tried soldering on the big 10&micro;H coil directly onto the SMD pads,
 and the voltage reached 5V and stayed at 5V =)
@@ -64,10 +68,14 @@ More pictures:
 [![photo, side](/img/blog/2021-06-21_side.jpg)](/img/blog/2021-06-21_side.jpg)
 [![photo, back](/img/blog/2021-06-21_back.jpg)](/img/blog/2021-06-21_back.jpg)
 
-The lack of parts forced me to change the resistance/inductance/capacitance
-values of {{% link "c9" %}} a little bit:
+The lack of parts forced me to adjust the resistance/inductance/capacitance
+values of {{% link "c9" %}}:
 
 [![circuit 9.1](/img/circuits/c9.1.png)](/c9.1)
+
+Thankfully I had planned for way too many capacitors on the PCB, just for some
+extra VROOOM, so the fact that I only had 10&micro;F capacitors instead of the
+planned 100&micro;F didn't matter too much.
 
 I also changed the 1M&Omega; resistors in the reference voltage generator to
 110k&Omega; because I read that smaller resistances in a voltage divider make
