--- a/content/textiles/t4.md
+++ b/content/textiles/t4.md
@@ -5,6 +5,7 @@ image: prototypes/p4.jpg
 date: 2021-05-12
 blog: prototype4
 tested: true
+prototypes: ["p4"]
 ---
 
 [![electrode map](/img/blog/2021-05-12_electrode_map.jpg)](/img/blog/2021-05-12_electrode_map.jpg)
