--- a/content/circuits/c8.md
+++ b/content/circuits/c8.md
@@ -5,5 +5,6 @@ image: circuits/c8.png
 date: 2021-06-03
 blog: roots
 boards: ["bp2"]
+prototypes: ["p5"]
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit8.sch
 ---
