add comment about D10

--- a/content/circuits/c9.md
+++ b/content/circuits/c9.md
@@ -6,3 +6,7 @@ date: 2021-06-15
 boards: ["bp3"]
 src: https://codeberg.org/psylink/psylink/src/branch/master/schematics/circuit9.sch
 ---
+
+- D10 is set to Vbat only for PCB layout reasons in {{% link "bp3" %}}. D10 is
+  not used, and I needed a low-resistance way to route the power from the power
+  switch to U1.
